--- a/scripts/components/road3/tpls/attr_branch_Tpl/realImageOfBranch.html
+++ b/scripts/components/road3/tpls/attr_branch_Tpl/realImageOfBranch.html
@@ -12,8 +12,8 @@
     </div>
 
     <div id="picMapShow">
-        <img id="picMapImg" ng-src="{{arrowMapShow}}">
-        <img id="picModalImg" ng-src="{{arrowCodeSrc}}" alt="无此模式图">
+        <img id="picMapImg" ng-src="{{arrowCodeSrc}}" alt="无此模式图">
+        <img id="picModalImg" ng-src="{{arrowMapShow}}">
         <div id="picMapDesc" ng-bind="diverObj.realimages[0].realCode"></div>
     </div>
     <form name="nameBranchForm">
@@ -51,7 +51,7 @@
             <div class="d-group">
                 <div class="d-name">实景图号：</div>
                 <div class="d-value">
-                    <input type="text" class="rounded d-input form-pic-input" placeholder="实景图号" ng-model="diverObj.realimages[0].realCode" ng-keydown="showPicSelect()" data-toggle="tooltip" data-placement="top">
+                    <input type="text" class="rounded d-input form-pic-input" placeholder="实景图号" ng-model="diverObj.realimages[0].arrowCode" ng-keydown="showPicSelect()">
                     <div class="pic-show" ng-show="showImgData">
                         <div class="option-hide">
                             <button type="button" class="close" aria-label="Close" ng-click="hidePicSelect($event)">
@@ -59,7 +59,7 @@
                             </button>
                         </div>
                         <div class="pic-show-well">
-                            <div class="img-well" ng-repeat="picture in pictures" ng-click="selectPicCode(picture.fileName,picture.fileContent)">
+                            <div class="img-well" ng-repeat="picture in pictures" ng-click="selectPicCode(picture.fileName)">
                                 <img class="show-img" ng-src="{{picture.fileContent}}" title="{{picture.fileName}}">
                                 <div class="img-describe">{{picture.fileName}}</div>
                             </div>
@@ -82,7 +82,7 @@
             <div class="d-group">
                 <div class="d-name">箭头图号：</div>
                 <div class="d-value">
-                    <div ng-bind="diverObj.realimages[0].arrowCode" class="show-val"></div>
+                    <div ng-bind="diverObj.realimages[0].realCode" class="show-val"></div>
                 </div>
             </div>
         </div>
