--- a/scripts/components/road3/tpls/attr_branch_Tpl/signAsRealOfBranch.html
+++ b/scripts/components/road3/tpls/attr_branch_Tpl/signAsRealOfBranch.html
@@ -1,4 +1,4 @@
-<div class="nameOfBraDiv" ng-controller="RealImageOfBranchCtrl">
+<div class="nameOfBraDiv" ng-controller="SignAsRealOfBranchCtrl">
     <div style="height:50px">
         <form class="form-horizontal" method="get">
             <div class="panel panel-default " style="background-color: transparent;border:0;">
@@ -13,86 +13,102 @@
 
     <div id="picMapShow">
         <img id="picMapImg" ng-src="{{arrowMapShow}}">
-        <img id="picModalImg" ng-src="{{arrowCodeSrc}}" alt="无此模式图">
-        <div id="picMapDesc" ng-bind="diverObj.details[0].realCode"></div>
+        <img id="picModalImg" ng-src="{{backimageCodeSrc}}" alt="无此底图">
+        <div id="picMapDesc" ng-bind="diverObj.signasreals[0].arrowCode"></div>
     </div>
     <form name="nameBranchForm">
-    <!--begin 模式图信息-->
-    <div class="module-fix-box">
-        <div id="detailChart" class="panel-collapse col-sm-12 collapse in" aria-expanded="true">
-            <div class="d-group">
-                <div class="d-name">进入线：</div>
-                <div class="d-value">
-                    <input type="text" class="d-input rounded" placeholder="入" ng-model="diverObj.inLinkPid">
-                </div> 
-            </div>
-            <div class="d-group">
-                <div class="d-name">退出线：</div>
-                <div class="d-value">
-                    <input type="text" class="d-input rounded" placeholder="出" ng-model="diverObj.outLinkPid">
-                </div> 
-            </div>
-            <div class="d-group info-group">
-                <div class="d-name">关系类型：</div>
-                <div class="d-value">
-                    <div class="btn-group d-radio-btn" data-toggle="buttons" style="z-index:0">
-                      <label ng-class="{'btn-primary':item.code==diverObj.relationshipType,'btn-default':item.code!=diverObj.relationshipType,'btn btn-sm relation-type':true}" ng-repeat="item in relationType" ng-click="switchRelType(item.code)">
-                        <input type="radio" name="relationType" value="{{item.code}}" autocomplete="off" data-relation-type="{{item.code}}">{{item.label}}
-                      </label>
-                    </div>
-                </div> 
-            </div>
-            <div class="d-group">
-                <div class="d-name">实景图类型：</div>
-                <div class="d-value">
-                    <select class="rounded d-input" ng-change="changeBranchType();" ng-model="diverObj.details[0].imageType" ng-options="value.id as value.label for value in branchTypeOptions" ></select>
-                </div> 
-            </div>
-            <div class="d-group">
-                <div class="d-name">实景图号：</div>
-                <div class="d-value">
-                    <input type="text" class="rounded d-input form-pic-input" placeholder="实景图号" ng-model="diverObj.details[0].realCode" ng-keydown="showPicSelect()" data-toggle="tooltip" data-placement="top" title="3D分歧箭头图号必须e或c开头">
-                    <div class="pic-show" ng-show="showImgData">
-                        <div class="option-hide">
-                            <button type="button" class="close" aria-label="Close" ng-click="hidePicSelect($event)">
-                                <span aria-hidden="true" class="glyphicon glyphicon-remove-sign"></span>
-                            </button>
-                        </div>
-                        <div class="pic-show-well">
-                            <div class="img-well" ng-repeat="picture in pictures" ng-click="selectPicCode(picture.fileName,picture.fileContent)">
-                                <img class="show-img" ng-src="{{picture.fileContent}}" title="{{picture.fileName}}">
-                                <div class="img-describe">{{picture.fileName}}</div>
-                            </div>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="pull-left num-well">
-                            第 <span class="pic-num" ng-bind="picNowNum">1</span> 页 |
-                            共 <span class="pic-total" ng-bind="picTotal">1</span> 页
-                        </div>
-                        <div class="pic-show-btn pull-right">
-                            <div class="pull-right btn-group">
-                                <button class="btn btn-default btn-xs pic-pre" ng-click="picPre()" disabled><<</button>
-                                <button class="btn btn-default btn-xs pic-next" ng-click="picNext()">>></button>
-                            </div>
-                        </div>
-                        <div class="pic-loading" ng-bind="loadText">loading...</div>
+        <!--begin 模式图信息-->
+        <div class="module-fix-box">
+            <div id="detailChart" class="panel-collapse col-sm-12 collapse in" aria-expanded="true">
+                <div class="d-group">
+                    <div class="d-name">进入线：</div>
+                    <div class="d-value">
+                        <input type="text" class="d-input rounded" placeholder="入" ng-model="diverObj.inLinkPid">
                     </div>
                 </div>
-            </div>
-            <div class="d-group">
-                <div class="d-name">箭头图号：</div>
-                <div class="d-value">
-                    <div ng-bind="diverObj.details[0].arrowCode" class="show-val"></div>
+                <div class="d-group">
+                    <div class="d-name">退出线：</div>
+                    <div class="d-value">
+                        <input type="text" class="d-input rounded" placeholder="出" ng-model="diverObj.outLinkPid">
+                    </div>
+                </div>
+                <div class="d-group info-group">
+                    <div class="d-name">关系类型：</div>
+                    <div class="d-value">
+                        <div class="btn-group d-radio-btn" data-toggle="buttons" style="z-index:0">
+                            <label ng-class="{'btn-primary':item.code==diverObj.relationshipType,'btn-default':item.code!=diverObj.relationshipType,'btn btn-sm relation-type':true}" ng-repeat="item in relationType" ng-click="switchRelType(item.code)">
+                                <input type="radio" name="relationType" value="{{item.code}}" autocomplete="off" data-relation-type="{{item.code}}">{{item.label}}
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-group">
+                    <div class="d-name">实景看板号：</div>
+                    <div class="d-value">
+                        <div class="show-val" ng-bind="diverObj.signasreals[0].pid"></div>
+                    </div>
+                </div>
+                <div class="d-group">
+                    <div class="d-name">箭头图号：</div>
+                    <div class="d-value">
+                        <div ng-show="diverObj.signasreals[0].branchType != 3">
+                            <input type="text" class="rounded d-input form-pic-input" placeholder="箭头图代码" ng-model="diverObj.signasreals[0].arrowCode" ng-keydown="showPicSelect()">
+                        </div>
+                        <div ng-show="diverObj.signasreals[0].branchType == 3">
+                            <input type="text" class="rounded d-input form-pic-input" placeholder="箭头图代码" ng-model="diverObj.signasreals[0].arrowCode" ng-keydown="showPicSelect()" data-toggle="tooltip" data-placement="top" title="3D分歧箭头图号必须e或c开头">
+                        </div>
+                        <div class="pic-show" ng-show="showImgData">
+                            <div class="option-hide">
+                                <button type="button" class="close" aria-label="Close" ng-click="hidePicSelect($event)">
+                                    <span aria-hidden="true" class="glyphicon glyphicon-remove-sign"></span>
+                                </button>
+                            </div>
+                            <div class="pic-show-well">
+                                <div class="img-well" ng-repeat="picture in pictures" ng-click="selectPicCode(picture.fileName)">
+                                    <img class="show-img" ng-src="{{picture.fileContent}}" title="{{picture.fileName}}">
+                                    <div class="img-describe">{{picture.fileName}}</div>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="pull-left num-well">
+                                第 <span class="pic-num" ng-bind="picNowNum">1</span> 页 |
+                                共 <span class="pic-total" ng-bind="picTotal">1</span> 页
+                            </div>
+                            <div class="pic-show-btn pull-right">
+                                <div class="pull-right btn-group">
+                                    <button class="btn btn-default btn-xs pic-pre" ng-click="picPre()" disabled><<</button>
+                                    <button class="btn btn-default btn-xs pic-next" ng-click="picNext()">>></button>
+                                </div>
+                            </div>
+                            <div class="pic-loading" ng-bind="loadText">loading...</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-group">
+                    <div class="d-name">模式图号：</div>
+                    <div class="d-value">
+                        <div ng-show="diverObj.signasreals[0].branchType != 3">
+                            <div ng-bind="diverObj.signasreals[0].backimageCode" class="show-val"></div>
+                        </div>
+                        <div ng-show="diverObj.signasreals[0].branchType == 3">
+                            <input type="text" class="d-input" placeholder="模式图号" ng-model="diverObj.signasreals[0].backimageCode" ng-change="changeBackimageCode()"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-group">
+                    <div class="d-name">SVG图号：</div>
+                    <div class="d-value">
+                        <input type="text" class="d-input" placeholder="SVG图号" ng-model="diverObj.signasreals[0].svgfileCode"/>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     </form>
     <!--end 模式图信息-->
     <!--begin 经过线-->
-    <div class="module-box show-detail-title" ng-click="showDetail();">
+    <div class="module-box show-detail-title" ng-click="showDetail(1);">
         <div class="box-head font-bold">
-             经过线 （共 <span ng-bind="diverObj.vias.length"></span> 条）
+            经过线 （共 <span ng-bind="diverObj.vias.length"></span> 条）
         </div>
     </div>
     <!--end 经过线-->
