--- a/scripts/components/road3/tpls/attr_branch_Tpl/signBoardOfBranch.html
+++ b/scripts/components/road3/tpls/attr_branch_Tpl/signBoardOfBranch.html
@@ -12,8 +12,8 @@
     </div>
 
     <div id="picMapShow">
-        <img id="picMapImg" ng-src="{{backimageCodeSrc}}" alt="无此底图">
-        <img id="picModalImg" ng-src="{{arrowMapShow}}">
+        <img id="picMapImg" ng-src="{{arrowMapShow}}">
+        <img id="picModalImg" ng-src="{{backimageCodeSrc}}" alt="无此底图">
         <div id="picMapDesc" ng-bind="diverObj.signboards[0].arrowCode"></div>
     </div>
     <form name="nameBranchForm">
@@ -64,7 +64,7 @@
                             </button>
                         </div>
                         <div class="pic-show-well">
-                            <div class="img-well" ng-repeat="picture in pictures" ng-click="selectPicCode(picture.fileName,picture.fileContent)">
+                            <div class="img-well" ng-repeat="picture in pictures" ng-click="selectPicCode(picture.fileName)">
                                 <img class="show-img" ng-src="{{picture.fileContent}}" title="{{picture.fileName}}">
                                 <div class="img-describe">{{picture.fileName}}</div>
                             </div>
