--- a/scripts/components/road3/tpls/toolBar_cru_tpl/addShapeTpl.html
+++ b/scripts/components/road3/tpls/toolBar_cru_tpl/addShapeTpl.html
@@ -1,4 +1,8 @@
 <style>
+    .btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
+        border-radius: 0!important;
+        border-radius: 0!important;
+    }
     .addNode_false {
         background: url('../../../images/road/button/dot_add.png') no-repeat;
         width: 32px;
@@ -57,12 +61,6 @@
     .btn-shape:hover{
         border: 1px solid #494949;
     }
-    .shape-well{
-        min-width: 367px;
-        background-color: #494949;
-        text-align: center;
-        opacity: .9;
-    }
 </style>
 <div id="fm-addShapeContainer" ng-controller="addShapeController" class="btn-group btn-group-sm dropdown" style="width: 100%;">
     <button type="button" class="btn addNode_{{classArr[6]}}" id="addNode" ng-click="addShape('RDNODE',6,$event)"
@@ -75,7 +73,7 @@
             data-toggle="dropdown" title="新增关系">
     </button>
     <ul class="dropdown-menu shape-well" role="menu">
-        <div class="btn-group btn-group-sm" style="float: none;">
+        <div class="btn-group btn-group-sm" style="margin: 0px 2px;">
             <button type="button" class="btn btn-shape" ng-click="addShape('RDGSC',8,$event)">立交</button>
             <button type="button" class="btn btn-shape" ng-click="addShape('BRANCH_3D',8,$event)">3D分歧</button>
             <button type="button" class="btn btn-shape" ng-click="addShape('RDRESTRICTION',8,$event)">交限</button>
