--- a/scripts/components/poi3/tpls/edit-tools/optionBarTpl.html
+++ b/scripts/components/poi3/tpls/edit-tools/optionBarTpl.html
@@ -13,21 +13,21 @@
         搜索结果
         </a>
         <!--<a href="javascript:;" ng-class="{'tab': true, 'active': tagSelect == 'checkResult'}" ng-model="tagSelect" uib-btn-radio="'checkResult'" ng-click="changeTag('checkResult')">检查结果</a>
-                    <a href="javascript:;" ng-class="{'tab': true, 'active': tagSelect == 'confusionInfo'}" ng-model="tagSelect" uib-btn-radio="'confusionInfo'" ng-click="changeTag('confusionInfo')">冲突检测</a>
+            <a href="javascript:;" ng-class="{'tab': true, 'active': tagSelect == 'confusionInfo'}" ng-model="tagSelect" uib-btn-radio="'confusionInfo'" ng-click="changeTag('confusionInfo')">冲突检测</a>
         <a href="javascript:;" ng-class="{'tab': true, 'active': tagSelect == 'editHistory'}" ng-model="tagSelect" uib-btn-radio="'editHistory'" ng-click="changeTag('editHistory')">作业履历</a>-->
-        <button ng-show="tagSelect == 'outputResult'" class="btn btn-xs fm-btn fm-output-btn pull-right" ng-click="emptyTableResult('outputResult');">
+        <button ng-show="tagSelect == 'outputResult'" class="btn btn-xs fm-output-btn pull-right" ng-click="emptyTableResult('outputResult');">
         <i class="glyphicon glyphicon-ban-circle"></i>
         清空
         </button>
-        <button ng-show="tagSelect == 'errorCheck'" class="btn btn-xs fm-btn fm-output-btn pull-right" ng-click="refreshCheckResult();">
+        <button ng-show="tagSelect == 'errorCheck'" class="btn btn-xs fm-output-btn pull-right" ng-click="refreshCheckResult();">
         <i class="glyphicon glyphicon-refresh"></i>
         刷新检查
         </button>
-        <button ng-show="tagSelect == 'errorCheck'" class="btn btn-xs fm-btn fm-output-btn pull-right" ng-click="CheckUpResult();">
+        <button ng-show="tagSelect == 'errorCheck'" class="btn btn-xs fm-output-btn pull-right" ng-click="CheckUpResult();">
         <i class="glyphicon glyphicon-equalizer"></i>
         在线检查
         </button>
-        <button ng-show="tagSelect == 'searchResult'" class="btn btn-xs fm-btn fm-output-btn pull-right" ng-click="emptyTableResult('searchResult');">
+        <button ng-show="tagSelect == 'searchResult'" class="btn btn-xs fm-output-btn pull-right" ng-click="emptyTableResult('searchResult');">
         <i class="glyphicon glyphicon-ban-circle"></i>
         清空
         </button>
@@ -45,8 +45,8 @@
                 页
             </div>
             <div class="pull-left fm-pagination-btn">
-                <button class="btn btn-xs fm-btn fm-output-btn fm-page-btn-prev" ng-disabled="checkPageNow == 1" ng-click="turnPage('prev');"> << </button>
-                <button class="btn btn-xs fm-btn fm-output-btn fm-page-btn-next" ng-disabled="checkPageNow == checkPageTotal" ng-click="turnPage('next');"> >> </button>
+                <button class="btn btn-xs fm-output-btn fm-page-btn-prev" ng-disabled="checkPageNow == 1" ng-click="turnPage('prev');"> << </button>
+                <button class="btn btn-xs fm-output-btn fm-page-btn-next" ng-disabled="checkPageNow == checkPageTotal" ng-click="turnPage('next');"> >> </button>
             </div>
         </div>
     </div>
