--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -1,6 +1,6 @@
 html, body {
     font-family: 'Helvetica Neue', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', '黑体', Arial, sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: normal;
 }
 
@@ -30,7 +30,6 @@ a:hover {
 }
 
 .fm-banner .banner-center {
-    font-size: 12px;
     line-height: 20px;
     letter-spacing: 0;
     margin-top: 20px;
@@ -53,6 +52,10 @@ a:hover {
     color: #A2A2A2;
 }
 
+.fm-banner .banner-top {
+    padding-bottom: 0 !important;
+}
+
 .fm-banner .banner-center div.selected {
     background-color: #313131;
 }
@@ -70,7 +73,6 @@ a:hover {
 
 .fm-banner .banner-center div h4 {
     font-size: 21px;
-    font-family: "宋体";
     font-weight: bolder;
     margin-top: 5px;
     margin-bottom: 0px;
@@ -83,55 +85,11 @@ a:hover {
     width: 100%;
 }
 
-.fm-panel-arrow {
-    text-align: center;
-    cursor: pointer;
-    height: 15px;
-}
-
-a.fm-panel-controlArrowUp > span {
-    background: url("../../images/road/img/arrow-up.png") no-repeat;
-    margin-top: 3px;
-    height: 10px;
-    width: 20px;
-    position: absolute;
-    margin-left: -10px;
-    transition: all 0s;
-}
-
-a.fm-panel-controlArrowDown > span {
-    background: url("../../images/road/img/arrow-down.png") no-repeat;
-    margin-top: 3px;
-    height: 10px;
-    width: 20px;
-    position: absolute;
-    margin-left: -10px;
-    transition: all 0s;
-}
-
-a.fm-panel-controlArrowUp, a.fm-panel-controlArrowDown {
-    background-color: #404040;
-    opacity: 0.95;
-    display: inline-block;
-    width: 40px;
-    height: 15px;
-    text-align: center;
-    transition: all 0s;
-}
-
 .fm-foldable {
     position: absolute;
     background-color: transparent;
     border: none;
     transition: all .2s ease-in-out;
-}
-
-.fm-foldable.folded {
-    right: -285px !important;
-}
-
-.fm-foldable.unfold {
-    right: 0px;
 }
 
 .fm-foldable .fm-fold-btn > a {
@@ -184,22 +142,21 @@ a.fm-panel-controlArrowUp, a.fm-panel-controlArrowDown {
 
 /**************************************nnade***************************************************/
 
-.fm-container {
-    background-color: #313131;
-    font-size: 12px;
-    position: absolute;
-    display: inline;
-    /*border: 1px solid #555;*/
-    overflow-y: auto;
-    z-index: 1;
-}
-
 .fm-col {
     height: 100%;
 }
 
 .fm-row {
     width: 100%;
+}
+
+.fm-container {
+    background-color: #313131;
+    position: absolute;
+    display: inline;
+    /*border: 1px solid #555;*/
+    overflow-y: auto;
+    z-index: 1;
 }
 
 .fm-container.fm-lvl1 {
@@ -227,13 +184,10 @@ a.fm-panel-controlArrowUp, a.fm-panel-controlArrowDown {
     /*padding: 5px;*/
 }
 
-.left-container {
-    /*padding: 5px;*/
-}
-
 .fm-tabs {
     background-color: #555;
     padding: 0px 10px;
+    margin-bottom: 5px;
 }
 
 .fm-tabs a.tab {
@@ -257,17 +211,9 @@ a.fm-panel-controlArrowUp, a.fm-panel-controlArrowDown {
     transition: all .3s;
 }
 
-.fm-tabs .btn-group-vertical button {
-    padding: 25px 7px;
-}
-
-.banner-top {
-    padding-bottom: 0 !important;
-}
-
 .fm-panel {
     opacity: 1;
-    margin: 5px 5px 0px !important;
+    margin-bottom: 10px;
     color: #fff;
     background-color: #555;
     border-radius: 4px;
@@ -426,13 +372,31 @@ form input[type='checkbox']:checked.ng-dirty {
     width: 162px !important;
 }
 
-.fm-btn {
-    border: 1px solid #aaa;
-}
-
 .fm-no-scroll {
     overflow-y: hidden;
     overflow-x: hidden;
+}
+
+.fm-component {
+    /*background: transparent;*/
+    position: absolute;
+    display: inline;
+    overflow-y: auto;
+    z-index: 1;
+    width: 100%;
+}
+
+.fm-component > div.title {
+    background-color: rgb(64, 64, 64);
+    padding: 12px 8px;
+    border-bottom: 1px solid rgba(255, 255, 255, .1);
+    color: #fff;
+    font-weight: bold;
+}
+
+.fm-component > div.content {
+    overflow: auto;
+    padding: 5px;
 }
 
 
@@ -1458,25 +1422,39 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
 }
 
 
+/*按钮组加中间的边框*/
+
+.btn-group > .btn:not(:first-child), .btn-group > .btn-group:not(:first-child) > .btn {
+    border-left: 1px solid #404040;
+}
+
+.btn-group-vertical .btn:not(:first-child) {
+    border-left: none;
+    border-top: 1px solid #404040;
+}
+
+
 /*紫色按钮*/
 
-button.btn-purple {
+.btn.btn-purple {
     background: rgba(138, 138, 203, 0.7);
     color: #FFF;
-    font-size: 14px;
+    /*font-size: 14px;*/
     font-weight: bold;
 }
 
-button.btn-purple:hover {
+.btn.btn-purple:hover {
     color: #FFF;
     background: rgba(164, 164, 229, 0.9);
 }
 
-button.btn-purple.active {
+.btn.btn-purple.active {
     background: rgba(164, 164, 229, 0.9);
 }
 
-button.btn-purple:focus {
+.btn.btn-purple:focus {
     color: #FFF;
-    box-shadow: none
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
 }
