--- a/scripts/components/road3/tpls/layers_switch_tpl/filedsResultTpl.html
+++ b/scripts/components/road3/tpls/layers_switch_tpl/filedsResultTpl.html
@@ -2,101 +2,78 @@
     .nav > li > a {
         padding: 3px;
     }
-
     #fm-dataList-btnGroup>div>button{
-         background: rgba(138,138,203,0.7);
+        background: rgba(138,138,203,0.7);
         color:#FFF;
     }
     #fm-dataList-btnGroup>div>button>a{
         color: #FFF;
     }
-
     #fm-dataList-btnGroup>div>button:hover{
         background: rgba(164,164,229,0.9);
     }
-
     #fm-dataList-btnGroup>div>button.active{
         background: rgba(164,164,229,0.9);
     }
-
     #fm-dataList-btnGroup>div>button:focus{
         border: none;
         box-shadow:none
     }
-
-
     #tipsTabContent #dataList {
         list-style-type: none;
         padding-left: 10px;
     }
-
     #tipsTabContent #dataList > li {
         list-style-type: none;
         margin-bottom: 10px;
     }
-
     #tipsTabContent #dataList > li>div:hover>a {
         color: rgba(255,255,255,0.5);
     }
-
     #tipsTabContent #dataList > li>div:hover>i{
         color: rgba(255,255,255,0.5);
     }
-
     #tipsTabContent #dataList > li > ul {
         display: none;
     }
-
     #tipsTabContent #dataList > li.selected > ul {
         display: block;
     }
-
     #tipsTabContent #dataList > li > div > img {
     }
-
     #tipsTabContent #dataList > li > div > label {
         color: #FFF;
         cursor: pointer;
         font-weight: bold;
     }
-
     #tipsTabContent #dataList > li > div > label>span{
         color:rgba(255,255,255,0.5);
         font-size: 10px;
         margin-left: 5px;
     }
-
     #tipsTabContent #dataList > li > div:hover > label>span{
         color:#FFF;
     }
-
-
     #tipsTabContent #dataList > li > div > label:hover {
         color: rgba(255,255,255,0.5);
     }
-
     #tipsTabContent #dataList > li > div > i {
         cursor: pointer;
         color: #FFF;
     }
-
     #tipsTabContent #dataList > li > ul {
         list-style-type: none;
     }
-
     #tipsTabContent #dataList > li > ul > li {
         color: #FFF;
         list-style-type: none;
     }
-
     #tipsTabContent #dataList > li > ul > li:hover {
         color: rgba(255,255,255,0.5);
     }
-
     #tipsTabContent #dataList > li > ul > li.selected {
         color: #FAA645;
     }
-
     #tipsTabContent #dataList > li > ul > li > label {
         cursor: pointer;
         font-weight: bold;
@@ -106,76 +83,60 @@
         list-style-type: none;
         padding-left: 10px;
     }
-
     #tipsTabContent #dataListOfPending > li {
         list-style-type: none;
         margin-bottom: 10px;
     }
-
     #tipsTabContent #dataListOfPending > li>div:hover>a {
         color: rgba(255,255,255,0.5);
     }
-
     #tipsTabContent #dataListOfPending > li>div:hover>i{
         color: rgba(255,255,255,0.5);
     }
-
     #tipsTabContent #dataListOfPending > li > ul {
         display: none;
     }
-
     #tipsTabContent #dataListOfPending > li.selected > ul {
         display: block;
     }
-
     #tipsTabContent #dataListOfPending > li > div > img {
-         vertical-align: top;
+        vertical-align: top;
     }
-
     #tipsTabContent #dataListOfPending > li > div > label {
         color: #FFF;
         cursor: pointer;
         vertical-align: top;
     }
-
     #tipsTabContent #dataListOfPending > li > div > label>span{
         color:rgba(255,255,255,0.5);
         font-size: 10px;
         margin-left: 5px;
     }
-
     #tipsTabContent #dataListOfPending > li > div:hover > label>span{
         color:#FFF;
     }
-
     #tipsTabContent #dataListOfPending > li > div > label:hover {
         color: rgba(255,255,255,0.5);
         cursor: pointer;
     }
-
     #tipsTabContent #dataListOfPending > li > div > i {
         cursor: pointer;
         color: #FFF;
         vertical-align: top;
     }
-
     #tipsTabContent #dataListOfPending > li > ul {
         list-style-type: none;
     }
-
     #tipsTabContent #dataListOfPending > li > ul > li {
         color: #FFF;
         list-style-type: none;
     }
-
     #tipsTabContent #dataListOfPending > li > ul > li:hover {
         color: #FAA645;
     }
-
     #tipsTabContent #dataListOfPending > li > ul > li.selected {
         color: #FAA645;
     }
-
     #tipsTabContent #dataListOfPending > li > ul > li > label {
         cursor: pointer;
         margin-bottom: 0px;
@@ -185,58 +146,46 @@
         list-style-type: none;
         padding-left: 10px;
     }
-
     #tipsTabContent #dataListOfPended > li {
         list-style-type: none;
         margin-bottom: 10px;
     }
-
     #tipsTabContent #dataListOfPended > li>div:hover>a {
         color: rgba(255,255,255,0.5);
     }
-
     #tipsTabContent #dataListOfPended > li>div:hover>i{
         color: rgba(255,255,255,0.5);
     }
-
     #tipsTabContent #dataListOfPended > li > ul {
         display: none;
     }
-
     #tipsTabContent #dataListOfPended > li.selected > ul {
         display: block;
     }
-
     #tipsTabContent #dataListOfPended > li > div > img {
         vertical-align: top;
     }
-
     #tipsTabContent #dataListOfPended > li > div > label {
         color: #FFF;
         cursor: pointer;
         vertical-align: top;
     }
-
     #tipsTabContent #dataListOfPended > li > div > label>span{
         color:rgba(255,255,255,0.5);
         font-size: 10px;
         margin-left: 5px;
     }
-
     #tipsTabContent #dataListOfPended > li > div:hover > label>span{
         color:#FFF;
     }
-
     #tipsTabContent #dataListOfPended > li > div > i {
         cursor: pointer;
         color: #FFF;
         vertical-align: top;
     }
-
     #tipsTabContent #dataListOfPended > li > ul {
         list-style-type: none;
     }
-
     #tipsTabContent #dataListOfPended > li > ul > li {
         color: #FFF;
         list-style-type: none;
@@ -244,69 +193,55 @@
     #tipsTabContent #dataListOfPended > li > ul > li:hover {
         color: rgba(255,255,255,0.5);
     }
-
     #tipsTabContent #dataListOfPended > li > ul > li.selected {
         color: #FAA645;
     }
-
     #tipsTabContent #dataListOfPended > li > ul > li > label {
         cursor: pointer;
     }
-
     #tipsTabContent #dataListOfPended > li > div > label:hover {
         color: rgba(255,255,255,0.5);
         cursor: pointer;
     }
-
     #fm-dataSelectContainer>a{
         color:rgba(255,255,255,0.5);
     }
-
     #fm-dataList-btnGroup button{
         outline-color: rgba(164,164,229,1);
     }
-
     #fm-dataSelectContainer>a{
         color: #FFF;
         cursor: pointer;
     }
-
     #fm-dataSelectContainer>a:hover{
         color:rgba(255,255,255,0.5);
     }
-
     #fm-dataSelectContainer>input{
         border-radius: 4px;
         background-color: rgba(0,0,0,0.3);
         border-width: 0;
         padding-left: 3px;
     }
-
     #dataList a{
         color:#FFF;
         text-decoration: none;
     }
-
     #dataList>li>div>a{
         margin-left: 5px;
         margin-right: 5px;
     }
-
     #dataListOfPending a{
         color:#FFF;
         text-decoration: none;
     }
-
     #dataListOfPending>li>div>a{
         margin-left: 5px;
         margin-right: 5px;
     }
-
     #dataListOfPended a{
         color:#FFF;
         text-decoration: none;
     }
-
     #dataListOfPended>li>div>a{
         margin-left: 5px;
         margin-right: 5px;
@@ -336,26 +271,25 @@
             <a href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: -33px;" ></a>
             <a href="#" title="刷新" class="btn glyphicon glyphicon-refresh" style="padding:6px 12px;font-size:14px;"></a>
         </div>
-        <div id="fm-dataList-btnGroup" class="btn-group btn-group-justified" style="margin-top: 10px;" role="group" aria-label="...">
+        <div class="btn-group btn-group-justified" style="margin-top: 10px;" role="group">
             <div class="btn-group" role="group">
-                <button type="button" class="btn btn-xs active"  ng-click="changeList([1,3])"><i class="glyphicon glyphicon-th-large"></i> <a href="#allTaskers" data-toggle="tab" style="font-size: 10px;text-decoration: none;font-weight:bold">全 部</a></button>
-            </div>
-            <div class="btn-group" role="group" style="border-left: 1px solid #404040;border-right: 1px solid #404040">
-                <button type="button" class="btn btn-xs"  ng-click="changeList([1])"><i class="glyphicon glyphicon-list-alt"></i> <a href="#pendingTaskers" data-toggle="tab" style="font-size: 10px;text-decoration: none;font-weight:bold">待 处 理</a></button>
+                <button type="button" class="btn btn-xs btn-purple" ng-class="{1:'active'}[dataListType]" ng-click="changeList(1)"><i class="glyphicon glyphicon-th-large"></i> <a href="#allTaskers" data-toggle="tab" style="font-size: 10px;text-decoration: none;font-weight:bold">全 部</a></button>
             </div>
             <div class="btn-group" role="group">
-                <button type="button" class="btn btn-xs"  ng-click="changeList([3])"><i class="glyphicon glyphicon-th-list"></i> <a href="#solvedTaskers" data-toggle="tab" style="font-size: 10px;text-decoration: none;font-weight:bold">已 处 理</a></button>
+                <button type="button" class="btn btn-xs btn-purple" ng-class="{2:'active'}[dataListType]" ng-click="changeList(2)"><i class="glyphicon glyphicon-list-alt"></i> <a href="#pendingTaskers" data-toggle="tab" style="font-size: 10px;text-decoration: none;font-weight:bold">待 处 理</a></button>
+            </div>
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-xs btn-purple" ng-class="{3:'active'}[dataListType]" ng-click="changeList(3)"><i class="glyphicon glyphicon-th-list"></i> <a href="#solvedTaskers" data-toggle="tab" style="font-size: 10px;text-decoration: none;font-weight:bold">已 处 理</a></button>
             </div>
         </div>
     </div>
-
     <div id="tipsTabContent" class="tab-content">
         <div class="tab-pane fade in active" id="allTaskers">
             <div style="background-color:rgb(49, 49, 49);padding:2px 5px;text-align: right;color: #FFF;border-bottom: 1px solid darkgray;margin-bottom: 5px">
                 <div class="pull-left">
-                        <a class="glyphicon all-check" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[showAll]" ng-click="showAllLayers('showAll',[1,3])">
-                        </a>
-                        <label for="" class="all-check-label" ng-click="showAllLayers('showAll',[1,3])">全选</label>
+                    <a class="glyphicon all-check" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[showAll]" ng-click="showAllLayers('showAll',[1,3])">
+                    </a>
+                    <label for="" class="all-check-label" ng-click="showAllLayers('showAll',[1,3])">全选</label>
                 </div>
                 <span>共{{items.total}}个</span>
             </div>
@@ -380,9 +314,9 @@
         <div class="tab-pane fade" id="pendingTaskers">
             <div style="padding:2px 5px;text-align: right;color: #FFF;border-bottom: 1px solid darkgray;margin-bottom: 5px">
                 <div class="pull-left">
-                        <a class="glyphicon all-check" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[showAllPre]" ng-click="showAllLayers('showAllPre',[1])">
-                        </a>
-                        <label for="" class="all-check-label" ng-click="showAllLayers('showAllPre',[1])">全选</label>
+                    <a class="glyphicon all-check" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[showAllPre]" ng-click="showAllLayers('showAllPre',[1])">
+                    </a>
+                    <label for="" class="all-check-label" ng-click="showAllLayers('showAllPre',[1])">全选</label>
                 </div>
                 <span>共{{items.total}}个</span>
                 <!--<span style="float:right">显示</span>-->
@@ -391,7 +325,7 @@
                 <ul id="dataListOfPending">
                     <li ng-repeat="pendItem in items " id="{{pendItem.id}}Pending">
                         <div ng-click="showContent(pendItem,[1],1,$event)"><i
-                                class="glyphicon glyphicon-folder-close" style=""></i>
+                            class="glyphicon glyphicon-folder-close" style=""></i>
                             <a class="glyphicon" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[pendItem.flag]" ng-click="showLayers(pendItem,$event)"></a>
                             <label>{{pendItem.name}} <span>{{pendItem.total}}</span></label>
                         </div>
@@ -403,15 +337,14 @@
                         </ul>
                     </li>
                 </ul>
-
             </div>
         </div>
         <div class="tab-pane fade" id="solvedTaskers">
             <div style="padding:2px 5px;text-align: right;color: #FFF;border-bottom: 1px solid darkgray;margin-bottom: 5px">
                 <div class="pull-left">
-                        <a class="glyphicon all-check" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[showAllYet]" ng-click="showAllLayers('showAllYet',[3])">
-                        </a>
-                        <label for="" class="all-check-label" ng-click="showAllLayers('showAllYet',[3])">全选</label>
+                    <a class="glyphicon all-check" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[showAllYet]" ng-click="showAllLayers('showAllYet',[3])">
+                    </a>
+                    <label for="" class="all-check-label" ng-click="showAllLayers('showAllYet',[3])">全选</label>
                 </div>
                 <span>共{{items.total}}个</span>
             </div>
