--- a/styles/imeep/editor-road.css
+++ b/styles/imeep/editor-road.css
@@ -270,7 +270,16 @@
     font-size: 12px;
 }
 
-.blackTheme .list-group-item {
+.blackTheme ul.list-group {
+    list-style: none;
+    overflow: hidden;
+    /*width: 97%;*/
+    /*margin: 5px;*/
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
+
+.blackTheme li.list-group-item {
     position: relative;
     display: block;
     padding: 1px 5px;
@@ -280,13 +289,21 @@
     padding-left: 15px
 }
 
-.blackTheme ul.list-group {
-    list-style: none;
-    overflow: hidden;
-    /*width: 97%;*/
-    /*margin: 5px;*/
-    border-radius: 4px;
-    margin-bottom: 10px;
+.blackTheme li.list-group-item1 {
+    padding: 2px 10px;
+    font-weight: bold;
+}
+
+.blackTheme li.list-group-item .list-line {
+    border-top: 1px solid #9E9E9E;
+    margin: 0px -5px 0px -15px;
+    height: 5px;
+}
+
+.blackTheme li.list-group-item1 .list-line {
+    border-top: 1px solid #9E9E9E;
+    margin: 0px -10px;
+    height: 5px;
 }
 
 .blackTheme ul > li {
@@ -321,7 +338,7 @@
 }
 
 .blackTheme .m-b-none {
-    margin-bottom: 0 !important;
+    /*margin-bottom: 0 !important;*/
 }
 
 .blackTheme .form-horizontal .control-label {
@@ -420,11 +437,6 @@
 .blackTheme .list-name {
     color: #FFF;
     margin: 5px 0;
-}
-
-.blackTheme .list-line {
-    border-bottom: 1px solid #9E9E9E;
-    margin: 0 -5px;
 }
 
 
