--- a/scripts/components/road3/tpls/layers_switch_tpl/filedsResultTpl.html
+++ b/scripts/components/road3/tpls/layers_switch_tpl/filedsResultTpl.html
@@ -271,7 +271,7 @@
             <a href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: -33px;" ></a>
             <a href="#" title="刷新" class="btn glyphicon glyphicon-refresh" style="padding:6px 12px;font-size:14px;"></a>
         </div>
-        <div class="btn-group btn-group-justified" style="margin-top: 10px;" role="group">
+        <div class="btn-group btn-group-justified fm-btn-group" style="margin-top: 10px;" role="group">
             <div class="btn-group" role="group">
                 <button type="button" class="btn btn-xs btn-purple" ng-class="{1:'active'}[dataListType]" ng-click="changeList(1)"><i class="glyphicon glyphicon-th-large"></i> <a href="#allTaskers" data-toggle="tab" style="font-size: 10px;text-decoration: none;font-weight:bold">全 部</a></button>
             </div>
@@ -287,9 +287,9 @@
         <div class="tab-pane fade in active" id="allTaskers">
             <div style="background-color:rgb(49, 49, 49);padding:2px 5px;text-align: right;color: #FFF;border-bottom: 1px solid darkgray;margin-bottom: 5px">
                 <div class="pull-left">
-                    <a class="glyphicon all-check" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[showAll]" ng-click="showAllLayers('showAll',[1,3])">
+                    <a class="glyphicon all-check" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[showAll]" ng-click="showAllLayers('showAll', 1)">
                     </a>
-                    <label for="" class="all-check-label" ng-click="showAllLayers('showAll',[1,3])">全选</label>
+                    <label for="" class="all-check-label" ng-click="showAllLayers('showAll', 1)">全选</label>
                 </div>
                 <span>共{{items.total}}个</span>
             </div>
@@ -314,9 +314,9 @@
         <div class="tab-pane fade" id="pendingTaskers">
             <div style="padding:2px 5px;text-align: right;color: #FFF;border-bottom: 1px solid darkgray;margin-bottom: 5px">
                 <div class="pull-left">
-                    <a class="glyphicon all-check" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[showAllPre]" ng-click="showAllLayers('showAllPre',[1])">
+                    <a class="glyphicon all-check" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[showAllPre]" ng-click="showAllLayers('showAllPre', 2)">
                     </a>
-                    <label for="" class="all-check-label" ng-click="showAllLayers('showAllPre',[1])">全选</label>
+                    <label for="" class="all-check-label" ng-click="showAllLayers('showAllPre', 2)">全选</label>
                 </div>
                 <span>共{{items.total}}个</span>
                 <!--<span style="float:right">显示</span>-->
@@ -342,9 +342,9 @@
         <div class="tab-pane fade" id="solvedTaskers">
             <div style="padding:2px 5px;text-align: right;color: #FFF;border-bottom: 1px solid darkgray;margin-bottom: 5px">
                 <div class="pull-left">
-                    <a class="glyphicon all-check" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[showAllYet]" ng-click="showAllLayers('showAllYet',[3])">
+                    <a class="glyphicon all-check" ng-class="{true:'glyphicon-check',false:'glyphicon-unchecked'}[showAllYet]" ng-click="showAllLayers('showAllYet', 3)">
                     </a>
-                    <label for="" class="all-check-label" ng-click="showAllLayers('showAllYet',[3])">全选</label>
+                    <label for="" class="all-check-label" ng-click="showAllLayers('showAllYet', 3)">全选</label>
                 </div>
                 <span>共{{items.total}}个</span>
             </div>
