统一修改poiaddress模型中的nameGroupid，pid，修改poi地址，等级等bug

--- a/scripts/components/poi-new/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi-new/tpls/attr-base/baseInfoTpl.html
@@ -55,11 +55,11 @@
                             <label >24小时</label>
                             <div>
                                 <label>
-                                    <input type="radio" name="24h" value="1" ng-model="poi.open24H">
+                                    <input type="radio" name="24h" value="1" ng-model="poi.open24h">
                                     是
                                 </label>
                                 <label>
-                                    <input type="radio" name="24h" value="2" ng-model="poi.open24H">
+                                    <input type="radio" name="24h" value="2" ng-model="poi.open24h">
                                     否
                                 </label>
                             </div>
