--- a/scripts/components/poi/tpls/attr-base/generalBaseTpl.html
+++ b/scripts/components/poi/tpls/attr-base/generalBaseTpl.html
@@ -177,7 +177,7 @@
                 <tr>
                     <td class="active" width="20%">24小时</td>
                     <td width="30%">
-                        <input type="checkbox" ng-model='poi.open24H'> 是
+                        <input type="checkbox" ng-model='poi.open24h'> 是
                     </td>
                     <td class="active" width="20%">室内POI</td>
                     <td width="30%">
