--- a/scripts/components/poi3/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi3/tpls/attr-base/baseInfoTpl.html
@@ -47,7 +47,7 @@
                             <label>等 级</label>
                             <div>
                                 <label ng-repeat="lev in levelArr">
-                                    <input type="radio"  ng-model="poi.level" value="{{lev}}"> {{lev}}
+                                    <input type="radio"  ng-model="poi.level" ng-click="chagePoiLevel(lev)" value="{{lev}}"> {{lev}}
                                 </label>
                             </div>
                         </li>
@@ -55,11 +55,11 @@
                             <label >24小时</label>
                             <div>
                                 <label>
-                                    <input type="radio" name="24h" value="1" ng-model="poi.open24H">
+                                    <input type="radio" name="24h" value="1" ng-model="poi.open24h">
                                     是
                                 </label>
                                 <label>
-                                    <input type="radio" name="24h" value="2" ng-model="poi.open24H">
+                                    <input type="radio" name="24h" value="2" ng-model="poi.open24h">
                                     否
                                 </label>
                             </div>
