--- a/scripts/components/road3/tpls/toolBar_cru_tpl/addRwShapTpl.html
+++ b/scripts/components/road3/tpls/toolBar_cru_tpl/addRwShapTpl.html
@@ -43,7 +43,7 @@
 </style>
 <div id="fm-addRwShapContainer" ng-controller="addRwShapeController" class="btn-group btn-group-sm dropdown" style="width: 100%;">
     <button type="button" class="btn addAdNode_{{classArr[12]}}" id="addRwNode" ng-click="addShape('RWNODE',12,$event)"
-            title="新增AWNODE+"></button>
+            title="新增RWNODE+"></button>
     <button type="button" class="btn addAdLink_{{classArr[13]}}" id="addAwLink" ng-click="addShape('RWLINK',13,$event)"
-            title="新增AWLINE+"></button>
+            title="新增RWLINE+"></button>
 </div>
