--- a/scripts/components/poi3/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi3/tpls/attr-base/baseInfoTpl.html
@@ -47,7 +47,7 @@
                             <label>等 级</label>
                             <div>
                                 <label ng-repeat="lev in levelArr">
-                                    <input type="radio"  ng-model="poi.level" ng-click="chagePoiLevel(lev)" value="{{lev}}"> {{lev}}
+                                    <input type="radio"  ng-model="poi.level" value="{{lev}}"> {{lev}}
                                 </label>
                             </div>
                         </li>
