--- a/styles/imeep/editor-road.css
+++ b/styles/imeep/editor-road.css
@@ -427,48 +427,9 @@
     margin: 0 -5px;
 }
 
-
-/*输入查询图片*/
-
-.blackTheme .pic-show {
-    /*position: absolute;*/
-    border: 1px solid #ddd;
-    z-index: 999;
-    padding-left: 4px;
-    padding-top: 6px;
-    padding-bottom: 7px;
-    /*background-color: #fff;*/
-    /*display: none;*/
-    box-shadow: 4px 4px 7px 0px #777;
-    min-width: 100%;
-    min-height: 193px;
-}
-
-.blackTheme .pic-show-well {
-    min-width: 100%;
-    min-height: 246px;
-}
-
-.blackTheme .img-well {
-    float: left;
-    padding: 3px;
-    /*border: 1px solid #ddd;*/
-    margin: 4px;
-    cursor: pointer;
-}
-
-.blackTheme .show-img {
-    width: 60px;
-    height: 49px;
-}
-
 .num-well {
     margin-left: 5px;
     color: white;
-}
-
-.blackTheme .pic-show-btn {
-    margin-right: 5px;
 }
 
 .option-hide {
@@ -977,7 +938,7 @@
 }
 
 .blackTheme .pic-loading {
-    min-height: 283px;
+    min-height: 300px;
     position: absolute;
     top: -1px;
     left: 1px;
@@ -989,6 +950,7 @@
     text-align: center;
     color: #fff;
     padding-top: 60%;
+    border-top-right-radius: 11%;
 }
 
 .blackTheme .img-describe {
