--- a/styles/imeep/editor-road.css
+++ b/styles/imeep/editor-road.css
@@ -242,7 +242,7 @@
 .blackTheme input[type="number"] {
     color: #F3F6FA;
     width: 170px;
-    margin-left: -3px;
+    /*margin-left: -3px;*/
     padding-left: 5px;
     border-radius: 4px;
     margin-top: 5px;
@@ -253,7 +253,7 @@
 .blackTheme input[type="text"] {
     color: #F3F6FA;
     width: 170px;
-    margin-left: -3px;
+    /*margin-left: -3px;*/
     padding-left: 5px;
     border-radius: 4px;
     /*margin-top: 5px;*/
@@ -720,7 +720,7 @@
 
 /*********************************属性栏修改后特殊样式**********************************/
 
-.blackTheme select.ng-dirty {
+/*.blackTheme select.ng-dirty {
     background-color: #307BA3;
 }
 
@@ -738,7 +738,7 @@
 
 .blackTheme input[type="number"].ng-dirty {
     background-color: #307BA3;
-}
+}*/
 
 
 /************************************名称属性样式*******************************************/
