--- a/scripts/components/road3/tpls/attr_branch_Tpl/signBoardOfBranch.html
+++ b/scripts/components/road3/tpls/attr_branch_Tpl/signBoardOfBranch.html
@@ -1,20 +1,14 @@
-<div class="nameOfBraDiv" ng-controller="SignBoardOfBranchCtrl">
-    <div style="height:50px">
-        <form class="form-horizontal" method="get">
-            <div class="panel panel-default " style="background-color: transparent;border:0;">
-                <div class="panel-heading font-bold" style=" border:0;height: 100%; background-color: transparent;color:#FFF;">
-                    方向看板
-                    <label ng-class="{'active':$index==0,'btn btn-primary btn-xs':true}" ng-bind="branchPid">
-                    </label>
-                </div>
-            </div>
-        </form>
+<div class="nameOfBraDiv fm-component" ng-controller="SignBoardOfBranchCtrl">
+    <div class="title">
+        方向看板
+        <label ng-class="{'active':$index==0,'btn btn-primary btn-xs':true}" ng-bind="branchPid">
+        </label>
     </div>
 
-    <div id="picMapShow">
-        <img id="picMapImg" ng-src="{{arrowMapShow}}">
-        <img id="picModalImg" ng-src="{{backimageCodeSrc}}" alt="无此底图">
-        <div id="picMapDesc" ng-bind="diverObj.signboards[0].arrowCode"></div>
+    <div class="picMapShow">
+        <img class="picMapImg" ng-src="{{arrowMapShow}}">
+        <img class="picModalImg" ng-src="{{backimageCodeSrc}}" alt="无此底图">
+        <div class="picMapDesc" ng-bind="diverObj.signboards[0].arrowCode"></div>
     </div>
     <form name="nameBranchForm">
     <!--begin 模式图信息-->
