--- a/scripts/components/road3/tpls/attr_branch_Tpl/signAsRealOfBranch.html
+++ b/scripts/components/road3/tpls/attr_branch_Tpl/signAsRealOfBranch.html
@@ -70,23 +70,18 @@
                             </div>
                             <div class="pic-show-btn pull-right">
                                 <div class="pull-right btn-group">
-                                    <button class="btn btn-default btn-xs pic-pre" ng-click="picPre()" disabled><<</button>
-                                    <button class="btn btn-default btn-xs pic-next" ng-click="picNext()">>></button>
+                                    <button class="btn btn-default btn-xs pic-pre" ng-click="picPre()" ng-disabled="picNowNum == 1"><<</button>
+                                    <button class="btn btn-default btn-xs pic-next" ng-click="picNext()" ng-disabled="picNowNum == picTotal">>></button>
                                 </div>
                             </div>
-                            <div class="pic-loading" ng-bind="loadText">loading...</div>
+                            <div class="pic-loading" ng-show="showPicLoading" ng-bind="loadText">loading...</div>
                         </div>
                     </div>
                 </div>
                 <div class="d-group">
                     <div class="d-name">模式图号：</div>
                     <div class="d-value">
-                        <div ng-show="diverObj.signasreals[0].branchType != 3">
-                            <div ng-bind="diverObj.signasreals[0].backimageCode" class="show-val"></div>
-                        </div>
-                        <div ng-show="diverObj.signasreals[0].branchType == 3">
-                            <input type="text" class="d-input" placeholder="模式图号" ng-model="diverObj.signasreals[0].backimageCode" ng-change="changeBackimageCode()"/>
-                        </div>
+                        <div ng-bind="diverObj.signasreals[0].backimageCode" class="show-val"></div>
                     </div>
                 </div>
                 <div class="d-group">
