--- a/scripts/components/road3/tpls/attr_branch_Tpl/schematicOfBranch.html
+++ b/scripts/components/road3/tpls/attr_branch_Tpl/schematicOfBranch.html
@@ -76,7 +76,7 @@
             <div class="d-group">
                 <div class="d-name">图形号码：</div>
                 <div class="d-value">
-                    <input type="text" class="d-input rounded" placeholder="图形号码" ng-model="diverObj.pid">
+                    <div ng-bind="diverObj.pid" class="show-val"></div>
                 </div>
             </div>
             <div class="d-group">
