--- a/scripts/components/road3/tpls/attr_branch_Tpl/namesOfBranch.html
+++ b/scripts/components/road3/tpls/attr_branch_Tpl/namesOfBranch.html
@@ -70,22 +70,27 @@
                         </div>
                         <div class="pic-show-btn pull-right">
                             <div class="pull-right btn-group">
-                                <button class="btn btn-default btn-xs pic-pre" ng-click="picPre()" disabled><<</button>
-                                <button class="btn btn-default btn-xs pic-next" ng-click="picNext()">>></button>
+                                <button class="btn btn-default btn-xs pic-pre" ng-click="picPre()" ng-disabled="picNowNum == 1"><<</button>
+                                <button class="btn btn-default btn-xs pic-next" ng-click="picNext()" ng-disabled="picNowNum == picTotal">>></button>
                             </div>
                         </div>
-                        <div class="pic-loading" ng-bind="loadText">loading...</div>
+                        <div class="pic-loading" ng-show="showPicLoading" ng-bind="loadText">loading...</div>
                     </div>
                 </div>
             </div>
             <div class="d-group">
                 <div class="d-name">模式图号：</div>
                 <div class="d-value">
-                    <div ng-show="diverObj.details[0].branchType != 3">
+                    <div ng-show="diverObj.details[0].branchType != 1 && diverObj.details[0].branchType != 3">
                         <div ng-bind="diverObj.details[0].patternCode" class="show-val"></div>
                     </div>
+                    <!--方面分歧-->
+                    <div ng-show="diverObj.details[0].branchType == 1">
+                        <input type="text" class="d-input" placeholder="模式图号" ng-model="diverObj.details[0].patternCode" ng-change="changePatternCode()" data-toggle="tooltip" data-placement="top" title="3D分歧模式图号必须5、7或8开头"/>
+                    </div>
+                    <!--3d-->
                     <div ng-show="diverObj.details[0].branchType == 3">
-                        <input type="text" class="d-input" placeholder="模式图号" ng-model="diverObj.details[0].patternCode" ng-change="changePatternCode()" data-toggle="tooltip" data-placement="top" title="3D分歧模式图号必须5或8开头"/>
+                        <input type="text" class="d-input" placeholder="模式图号" ng-model="diverObj.details[0].patternCode" ng-change="changePatternCode()" data-toggle="tooltip" data-placement="top" title="方面分歧模式图号必须5或8开头"/>
                     </div>
                 </div>
             </div>
