修改高速分歧高亮、增加tips红绿灯和红绿灯方位

--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -160,7 +160,7 @@
     <div class="middle">
         <div class="tip-left">
             <div class="panel panel-default" style="background-color: #555;margin-bottom: 0px;" >
-                <div  class="panel-body" ng-if="allTipsType==1101">
+                <div class="panel-body" ng-if="allTipsType==1101">
                     <form class="form-horizontal" method="get" style="padding:0px 3px 0px 3px;">
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
                             <label class="col-sm-5 control-label" style="padding: 4px">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态:</label>
@@ -230,22 +230,46 @@
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
                             <label class="col-sm-5 control-label" style="padding: 4px">不受指控Link:</label>
                             <div class="col-sm-7" style="padding: 3px">
-                                <div class="col-sm-12" style="padding: 3px" ng-repeat="item in sceneExit">
-                                    <span class="label blank-text" ng-click="getFeatDataCallback(item,'RDLINK')" ng-bind="item"></span>
+                                <div class="col-sm-12" style="padding: 3px" ng-repeat="item in disableCtl">
+                                    <span class="label blank-text" ng-click="getFeatDataCallback(item.f.id,'RDLINK')" ng-bind="item.f.id"></span>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
-                            <label class="col-sm-5 control-label" style="padding: 4px">受控&nbsp;&nbsp;&nbsp;Link:</label>
+                            <label class="col-sm-5 control-label" style="padding: 4px">受控&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Link:</label>
                             <div class="col-sm-7">
-                                <div class="col-sm-12" style="padding: 3px" ng-repeat="item in sceneExit">
-                                    <span class="label blank-text" ng-click="getFeatDataCallback(item,'RDLINK')" ng-bind="item"></span>
+                                <div class="col-sm-12" style="padding: 3px" ng-repeat="item in enableCtl">
+                                    <span class="label blank-text" ng-click="getFeatDataCallback(item.f.id,'RDLINK')" ng-bind="item.f.id"></span>
                                 </div>
                             </div>
                         </div>
                     </form>
                 </div>
                 <!--end 红绿灯-->
+                <!--begin 红绿灯方位-->
+                <div class="panel-body" ng-if="allTipsType==1103" style="border-radius: 4px;background-color: #555;">
+                    <form class="form-horizontal" method="get" style="padding: 0px 3px 0px 3px;">
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span  class="label label-info" ng-bind="showContent"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">关联道路:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label " style="cursor:pointer;" ng-click="getFeatDataCallback(linkPid,'RDLINK')" ng-bind="linkPid" title="{{linkPid}}"></span>
+                            </div>
+                        </div>
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
+                            <label class="col-sm-5 control-label" style="padding: 4px">方向:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label" ng-bind='traffDirection'></span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!--end 红绿灯方位-->
                 <div class="panel-body"  ng-if="allTipsType==1105">
                     <form class="form-horizontal" method="get" style="padding:0px 3px 0px 3px;">
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
